--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,17 @@
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
+# Supabase Configuration
+# Get these from: https://app.supabase.com/project/_/settings/api
+
+# Project URL (e.g., https://xxxxx.supabase.co)
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your-publishable-or-anon-key
+
+# Anon/Publishable key (public - safe for client-side)
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your-anon-or-publishable-key
+
+# Service role key (secret - only for server-side operations)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Admin email (used to identify admin users)
+NEXT_PUBLIC_APP_ADMIN_EMAIL=your-email@example.com
+
+# Optional: Database password (for direct psql connections)
+# SUPABASE_DB_PASSWORD=your-database-password
