--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
     "pg": "^8.18.0",
+    "playwright": "^1.58.2",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
