Enhance admin content management with auto-translation features
- Added `TranslateDialog` component for auto-translation prompts during content edits.
- Integrated `useAutoTranslate` hook to detect changes in bilingual fields and offer translation options.
- Updated `QuestionEditDialog`, `ReadingEditDialog`, and `TopicForm` to utilize auto-translation functionality.
- Modified `.env.example` to include the new `ANTHROPIC_API_KEY` for translation services.
- Adjusted database queries to include creator information for topics, improving content attribution.
- Removed `is_builtin` field from topics to streamline schema and replaced it with `creator_id` for better tracking of content ownership.
- Enhanced user experience by providing feedback on translation actions and ensuring seamless content updates.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ NEXT_PUBLIC_APP_ADMIN_EMAIL=your-email@example.com
 
 # Optional: Database password (for direct psql connections)
 # SUPABASE_DB_PASSWORD=your-database-password
+
+# Anthropic API key (for auto-translation in admin forms)
+ANTHROPIC_API_KEY=your-anthropic-api-key
