--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
     "lucide-react": "^0.511.0",
+    "motion": "^12.34.0",
     "next": "latest",
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
