--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "validate": "npm run lint:fix && npm run test && npm run build"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.35.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
