feat: Anki deck import with media pipeline and template engine
Add full Anki import system supporting .apkg and CrowdAnki .zip formats.
Parses SQLite collections, renders Mustache-like templates (including
cloze deletions), converts HTML to Markdown, optimizes images (SVG/WebP),
encodes audio (MP3), uploads media to Supabase Storage, and inserts
flashcards with proper categories. Includes admin auto-translate option,
private/public visibility, and comprehensive sanitization to strip
embedded scripts and orphaned JavaScript from Anki templates.

--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/typography": "^0.5.19",
+    "anki-reader": "^0.3.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
+    "jszip": "^3.10.1",
+    "lamejs": "^1.2.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.34.0",
     "next": "^16.1.6",
